--- a/root/projects/slingshot/source/web/components/rules/rules-list.css
+++ b/root/projects/slingshot/source/web/components/rules/rules-list.css
@@ -52,6 +52,11 @@
    background-color: #FBFBFB;
 }
 
+.rules-list .rules-list-item:hover
+{
+   background-color: #F4FAFF;   
+}
+
 .rules-list .rules-list-item.selected
 {
    background-color: #D2E5F2;
